--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html ng-app="MyApp">
 <head>
+    <base href='/'>
 	<title>User Story</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rx-angular/1.1.3/rx.angular.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
 
-	<script type="text/javascript" src="app/app.js"></script>
+
+
+	<!-- Services -->
+    <script type="text/javascript" src="app/services/authService.js"></script>
+    <!-- Controllers -->
+    <script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+
+    <script type="text/javascript" src="app/app.routes.js"></script>
+    <script type="text/javascript" src="app/app.js"></script>
 </head>
 <body>
 
-	<h1> Create Your User Story</h1>
-	
-	{{ 2 + 2 }}
+<main class="container">
+
+    <div ng-view></div>
 
 </body>
 </html>
